@@ -14,7 +14,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 
 @Service
@@ -28,6 +27,9 @@ public class StorageFileService {
   @PostConstruct
   public void init() {
     createDir(storageProperties.getUserUploadPath());
+    createDir(storageProperties.getHotelPath());
+    createDir(storageProperties.getDocumentPath());
+    createDir(storageProperties.getFacilityIconPath());
   }
 
   private void createDir(String path) {
@@ -43,13 +45,23 @@ public class StorageFileService {
     return saveImage(file, storageProperties.getUserUploadPath());
   }
 
-  private String saveImage(MultipartFile file, String folderPath) throws IOException {
+  public String uploadHotelImg(MultipartFile file) {
+    return saveImage(file, storageProperties.getHotelPath());
+  }
+
+  public String uploadDocument(MultipartFile file) {
+    return saveImage(file, storageProperties.getDocumentPath());
+  }
+
+  private String saveImage(MultipartFile file, String folderPath) {
     createDir(folderPath);
-
-    String fileName = fileHelperUtil.generateFileName(file.getOriginalFilename());
-    Path path = Paths.get(folderPath, fileName);
-
-    Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
-    return fileName;
+    try {
+      String fileName = fileHelperUtil.generateFileName(file.getOriginalFilename());
+      Path path = Path.of(folderPath, fileName);
+      Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+      return fileName;
+    } catch (IOException e) {
+      throw new RuntimeException("Failed to upload file", e);
+    }
   }
 }
